<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Variables" Id="{bf094cab-6961-468c-af79-aad967ce449e}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
    {attribute 'pytmc' := '
        pv: PLC:DREAM:VAC:OVRDON
        io: io
    '}
    bSystemOverrideMode	: BOOL := FALSE; (* Global system override for the DREAM Vacuum System*)

    {attribute 'pytmc' := '
        pv: PLC:DREAM:ON_BEAMLINE
        io: i
    '}
    bOnBeamline	: BOOL := FALSE;

    //HV Interlock Pressure setpoint default is 1e-5 Torr, when switched to MC pirani gauge this value will change to 5e-04 Torr.
    {attribute 'pytmc' := '
        pv: PLC:DREAM:HV_MAX_PRESS_SP
        io: io
    '}
    fHighVoltageMaxPressure : REAL := 1e-05; (*inital High voltage Minimum Enable Pressure*)

     {attribute 'pytmc' := '
    pv: HV:GPI:SP;
    io:io;
    field: HOPR 1000
    field: LOPR 0
    field: PREC 2
    field: EGU "TORR"
    autosave_pass1: VAL DESC
    '}
    rHV_GPI_SP: REAL := 0.0005; (*inital high voltage setpoint *)

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>